--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,23 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 400px;
+  flex-direction: column;
+}
+
+.block{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0;
+padding: 0;
+}
+
+.pic {
+width: 1000px;
+height: 720px;
+margin: 0;
+padding: 0;
 }
 
 .card {
